# jq-node-bindings

./: .gitignore  .gitmodules  .npmignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  benchmark.js  binding.gyp  commit.md  configure  index.d.ts  index.js  jest.config.js  package-lock.json  package.json  run-benchmark-comparison.sh  t.cjs  test.js
.github/workflows/: publish.yml  test.yml
benchmarks/functions/: exec-async.js  exec.js  render-async.js  render-sync.js
benchmarks/scenarios/: exec-async-large.js  exec-async-medium.js  exec-async-small.js  exec-sync-large.js  exec-sync-medium.js  exec-sync-small.js  render-async-large.js  render-async-medium.js  render-async-small.js  render-sync-large.js  render-sync-medium.js  render-sync-small.js
benchmarks/utils/: data.js  log.js  measure.js  run.js
lib/: index.js  jq.js  parse.js  template.js  templateAsync.js
reports/: jest-port-api.xml
src/: binding.cc  binding.cpp  binding.h  index.cpp
test/: parallel-stress.test.js  santiy-async.test.js  santiy.test.js  template-async.test.js  template.test.js  worker-stress.test.js
util/: configure.js
